# src/main/java/com/bookstore/controller/UpdateBookDTO.java
@@ -1,33 +1,33 @@
 package com.bookstore.controller;
 
 public class UpdateBookDTO {
-    private String Id;
-    private int quantity;
-    private boolean active;
+    private String id;
+    private Integer quantity;
+    private Boolean active;
 
     public UpdateBookDTO() {}
 
     public String getId() {
-        return Id;
+        return id;
     }
 
     public void setId(String id) {
-        Id = id;
+        this.id = id;
     }
 
-    public int getQuantity() {
+    public Integer getQuantity() {
         return quantity;
     }
 
-    public void setQuantity(int quantity) {
+    public void setQuantity(Integer quantity) {
         this.quantity = quantity;
     }
 
-    public boolean isActive() {
+    public Boolean isActive() {
         return active;
     }
 
-    public void setActive(boolean active) {
+    public void setActive(Boolean active) {
         this.active = active;
     }
 }
